    and a CAST(? AS NVARCHAR) is used when we detect 
    for a table.   However, I'd continue
    to characterize Pyodbc + FreeTDS 0.91 behavior as 
    pretty crappy, there are still many queries such 
    as used in reflection which cause a core dump on 
    Linux, and it is not really usable at all
    on OSX, MemoryErrors abound and just plain broken 
    unicode support.   [ticket:2273]

  - "0" is accepted as an argument for limit() which
    will produce "TOP 0". [ticket:2222]

- oracle
  - Fixed ReturningResultProxy for zxjdbc dialect.
    [ticket:2272].  Regression from 0.6.

- ext
  - Added local_attr, remote_attr, attr accessors
    to AssociationProxy, providing quick access
    to the proxied attributes at the class
    level. [ticket:2236]

  - Changed the update() method on association proxy
    dictionary to use a duck typing approach, i.e.
    checks for "keys", to discern between update({}) 
    and update((a, b)).   Previously, passing a 
    dictionary that had tuples as keys would be misinterpreted
    as a sequence. [ticket:2275]

0.7.2
=====
- orm
  - Feature enhancement: joined and subquery
    loading will now traverse already-present related
    objects and collections in search of unpopulated
    attributes throughout the scope of the eager load
    being defined, so that the eager loading that is
    specified via mappings or query options
    unconditionally takes place for the full depth,
    populating whatever is not already populated.
    Previously, this traversal would stop if a related
    object or collection were already present leading
    to inconsistent behavior (though would save on
    loads/cycles for an already-loaded graph). For a
    subqueryload, this means that the additional
    SELECT statements emitted by subqueryload will
    invoke unconditionally, no matter how much of the
    existing graph is already present (hence the
    controversy). The previous behavior of "stopping"